--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -1,122 +1,62 @@
-<div class="projects">
-  <div class="container">
-    <div class="row">
-      <!-- line 1 -->
-      <div class="content1">
-        <div class="col-12">
-          <div class="high_text">
-            <h1>Imagination Trumps Knowledge!</h1>
+<section class="project_PC">
+  <div class="projects">
+    <div class="container">
+      <div class="row">
+        <!-- line 1 -->
+        <div class="content1">
+          <div class="col-12">
+            <div class="high_text">
+              <h1>Imagination Trumps Knowledge!</h1>
+            </div>
           </div>
-        </div>
-        <div class="col-12">
-          <div class="big_content">
-            <div class="row">
-              <div class="col-6">
-                <div class="content_right">
-                  <img src="../../../assets/img/project_img/big_img.jpg" alt="">
+          <div class="col-12">
+            <div class="big_content">
+              <div class="row">
+                <div class="col-6">
+                  <div class="content_left">
+                    <img src="../../../assets/img/project_img/big_img.jpg" alt="">
+                  </div>
                 </div>
-              </div>
 
-              <div class="col-6">
-                <div class="content_left">
-                  <p>Featured Project</p>
-                  <h3>Hanoi Start-Up Brother FC</h3>
-                  <p>A feature-rich Crypto Screener App using React, Tailwind CSS, Context API, React Router and Recharts. It shows detail regarding almost all the cryptocurrency. You can easily convert the price in your local currency.</p>
-                  <div class="small_box_content">
-                    <a href=""><img src="../../../assets/img/project_img/webflow_icon.png" alt=""></a>
-                    <button><a href="">Visit Projects</a></button>
+                <div class="col-6">
+                  <div class="content_right">
+                    <p>Featured Project</p>
+                    <h3>Hanoi Start-Up Brother FC</h3>
+                    <p>A feature-rich Crypto Screener App using React, Tailwind CSS, Context API, React Router and Recharts. It shows detail regarding almost all the cryptocurrency. You can easily convert the price in your local currency.</p>
+                    <div class="small_box_content">
+                      <a href=""><img src="../../../assets/img/project_img/webflow_icon.png" alt=""></a>
+                      <button><a href="">Visit Projects</a></button>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <!-- line 2 -->
-      <div class="content2">
-        <div class="col-12">
-          <div class="small_content">
-            <div class="row">
-              <div class="col-6">
-                <div class="sm_box">
-                  <div class="img">
-                    <img src="../../../assets/img/project_img/small_img.png" alt="">
+        <!-- line 2 -->
+        <div class="content2">
+          <div class="col-12">
+            <div class="small_content">
+              <div class="row">
+                <div class="col-6">
+                  <div class="sm_box">
+                    <div class="img">
+                      <img src="../../../assets/img/project_img/small_img.png" alt="">
+                    </div>
+                    <div class="divide">
+                      <h3>NFT collection Website</h3>
+                      <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                    </div>
+                    <p>Website Template</p>
+                    <a href="">Visit</a>
                   </div>
-                  <div class="divide">
-                    <h3>NFT collection Website</h3>
-                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
-                  </div>
-                  <p>Website Template</p>
-                  <a href="">Visit</a>
                 </div>
-              </div>
 
-              <div class="col-6">
-                <div class="sm_box">
-                  <div class="img">
-                    <img src="../../../assets/img/project_img/small_img.png" alt="">
-                  </div>
-                  <p>Website Template</p>
-                  <div class="divide">
-                    <h3>NFT collection Website</h3>
-                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
-                  </div>
-                  <a href="">Visit</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- line 3 -->
-      <div class="content1">
-        <div class="col-12">
-          <div class="big_content">
-            <div class="row">
-              <div class="col-6">
-                <div class="content_right">
-                  <img src="../../../assets/img/project_img/big_img.jpg" alt="">
-                </div>
-              </div>
-
-              <div class="col-6">
-                <div class="content_left">
-                  <p>Featured Project</p>
-                  <h3>Hanoi Start-Up Brother FC</h3>
-                  <p>A feature-rich Crypto Screener App using React, Tailwind CSS, Context API, React Router and Recharts. It shows detail regarding almost all the cryptocurrency. You can easily convert the price in your local currency.</p>
-                  <div class="small_box_content">
-                    <a href=""><img src="../../../assets/img/project_img/webflow_icon.png" alt=""></a>
-                    <button><a href="">Visit Projects</a></button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- line 4 -->
-      <div class="content2">
-        <div class="col-12">
-          <div class="small_content">
-            <div class="row">
-              <div class="col-6">
-                <div class="sm_box">
-                  <div class="img">
-                    <img src="../../../assets/img/project_img/small_img.png" alt="">
-                  </div>
-                  <p>Website Template</p>
-                  <div class="divide">
-                    <h3>NFT collection Website</h3>
-                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
-                  </div>
-                  <a href="">Visit</a>
-                </div>
-              </div>
-
-              <div class="col-6">
-                <div class="sm_box">
-                  <div class="img">
-                    <img src="../../../assets/img/project_img/small_img.png" alt="">
+                <div class="col-6">
+                  <div class="sm_box">
+                    <div class="img">
+                      <img src="../../../assets/img/project_img/small_img.png" alt="">
+                    </div>
                     <p>Website Template</p>
                     <div class="divide">
                       <h3>NFT collection Website</h3>
@@ -129,9 +69,230 @@
             </div>
           </div>
         </div>
+        <!-- line 3 -->
+        <div class="content1">
+          <div class="col-12">
+            <div class="big_content">
+              <div class="row">
+                <div class="col-6">
+                  <div class="content_left">
+                    <img src="../../../assets/img/project_img/big_img.jpg" alt="">
+                  </div>
+                </div>
+
+                <div class="col-6">
+                  <div class="content_right">
+                    <p>Featured Project</p>
+                    <h3>Hanoi Start-Up Brother FC</h3>
+                    <p>A feature-rich Crypto Screener App using React, Tailwind CSS, Context API, React Router and Recharts. It shows detail regarding almost all the cryptocurrency. You can easily convert the price in your local currency.</p>
+                    <div class="small_box_content">
+                      <a href=""><img src="../../../assets/img/project_img/webflow_icon.png" alt=""></a>
+                      <button><a href="">Visit Projects</a></button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- line 4 -->
+        <div class="content2">
+          <div class="col-12">
+            <div class="small_content">
+              <div class="row">
+                <div class="col-6">
+                  <div class="sm_box">
+                    <div class="img">
+                      <img src="../../../assets/img/project_img/small_img.png" alt="">
+                    </div>
+                    <p>Website Template</p>
+                    <div class="divide">
+                      <h3>NFT collection Website</h3>
+                      <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                    </div>
+                    <a href="">Visit</a>
+                  </div>
+                </div>
+
+                <div class="col-6">
+                  <div class="sm_box">
+                    <div class="img">
+                      <img src="../../../assets/img/project_img/small_img.png" alt="">
+                      <p>Website Template</p>
+                      <div class="divide">
+                        <h3>NFT collection Website</h3>
+                        <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                      </div>
+                      <a href="">Visit</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
       </div>
-
-
     </div>
   </div>
-</div>
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- PROJECT - MOBILE -->
+<section class="project_MB">
+  <div class="projects">
+    <div class="container">
+      <div class="row">
+        <!-- line 1 -->
+        <div class="col-12">
+          <div class="high_text">
+            <h1>Imagination Trumps Knowledge!</h1>
+          </div>
+        </div>
+        <!-- line 1 -->
+        <div class="content1">
+
+          <div class="big_content">
+            <div class="row">
+              <div class="col-12">
+                <div class="content_left">
+                  <img src="../../../assets/img/project_img/big_img.jpg" alt="">
+                </div>
+              </div>
+
+              <div class="col-12">
+                <div class="content_right">
+                  <p>Featured Project</p>
+                  <h3>Hanoi Start-Up Brother FC</h3>
+                  <p>A feature-rich Crypto Screener App using React, Tailwind CSS, Context API, React Router and Recharts. It shows detail regarding almost all the cryptocurrency. You can easily convert the price in your local currency.</p>
+                  <div class="small_box_content">
+                    <a href=""><img src="../../../assets/img/project_img/webflow_icon.png" alt=""></a>
+                    <button><a href="">Visit Projects</a></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <!-- line 2 -->
+        <div class="content2">
+
+          <div class="small_content">
+            <div class="row">
+              <div class="col-6">
+                <div class="sm_box">
+                  <div class="img">
+                    <img src="../../../assets/img/project_img/small_img.png" alt="">
+                  </div>
+                  <p>Website Template</p>
+                  <div class="divide">
+
+                    <h3>NFT collection Website</h3>
+                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                  </div>
+
+                  <a href="">Visit</a>
+                </div>
+              </div>
+
+              <div class="col-6">
+                <div class="sm_box">
+                  <div class="img">
+                    <img src="../../../assets/img/project_img/small_img.png" alt="">
+                  </div>
+                  <p>Website Template</p>
+                  <div class="divide">
+                    <h3>NFT collection Website</h3>
+                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                  </div>
+                  <a href="">Visit</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <!-- line 3 -->
+        <div class="content1">
+
+          <div class="big_content">
+            <div class="row">
+              <div class="col-12">
+                <div class="content_left">
+                  <img src="../../../assets/img/project_img/big_img.jpg" alt="">
+                </div>
+              </div>
+
+              <div class="col-12">
+                <div class="content_right">
+                  <p>Featured Project</p>
+                  <h3>Hanoi Start-Up Brother FC</h3>
+                  <p>A feature-rich Crypto Screener App using React, Tailwind CSS, Context API, React Router and Recharts. It shows detail regarding almost all the cryptocurrency. You can easily convert the price in your local currency.</p>
+                  <div class="small_box_content">
+                    <a href=""><img src="../../../assets/img/project_img/webflow_icon.png" alt=""></a>
+                    <button><a href="">Visit Projects</a></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <!-- line 4 -->
+        <div class="content2">
+
+          <div class="small_content">
+            <div class="row">
+              <div class="col-6">
+                <div class="sm_box">
+                  <div class="img">
+                    <img src="../../../assets/img/project_img/small_img.png" alt="">
+                  </div>
+                  <p>Website Template</p>
+                  <div class="divide">
+                    <h3>NFT collection Website</h3>
+                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                  </div>
+
+                  <a href="">Visit</a>
+                </div>
+              </div>
+
+              <div class="col-6">
+                <div class="sm_box">
+                  <div class="img">
+                    <img src="../../../assets/img/project_img/small_img.png" alt="">
+                  </div>
+                  <p>Website Template</p>
+                  <div class="divide">
+                    <h3>NFT collection Website</h3>
+                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                  </div>
+                  <a href="">Visit</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+
+</section>
