--- a/portfolio/src/app/components/shared/footer/footer.component.css
+++ b/portfolio/src/app/components/shared/footer/footer.component.css
@@ -14,6 +14,7 @@
   font-size: 18px;
   text-align: end;
   color: var(--black-color);
+  text-align: center;
 }
 .footer .mid span{
   position: relative;
@@ -44,10 +45,13 @@
   transform: translate(-50%, -50%);
 }
 .right{
-  float: right;
+  /* float: right; */
+  text-align: center;
 }
 .right a{
   text-decoration: none;
+
+
 }
 
 .mid span:first-child{
@@ -57,7 +61,8 @@
 
 
 .left{
-  float: left;
+  /* float: left; */
+  text-align: center;
 }
 
 .mid p{
