--- a/portfolio/src/app/components/shared/header/header.component.css
+++ b/portfolio/src/app/components/shared/header/header.component.css
@@ -1,32 +1,184 @@
+
+
+
+
+@media only screen and (max-width: 1024px) {
+  .header_PC{
+    display: none;
+  }
+
 /* header */
 
-.header{
+  .header_MB .header{
+    position: relative;
+    margin-top: 40px;
+
+  }
+  /* navbar left */
+  .header_MB .header .nav_left{
+    padding-left:  15px;
+    display: flex;
+    background-color: var(--F5F5F5-color);
+    font-family: istok;
+  }
+
+  .header_MB .header .nav_left li{
+    position: relative;
+    padding-right: 10px;
+    font-family: istok;
+    color: var(--black-color);
+  }
+
+  .header_MB .header .nav_left li a{
+    font-size: 18px;
+    color: var(--black-color);
+    text-decoration: none;
+    position: relative;
+  }
+
+  .header_MB .header .nav_left li a::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--black-color);
+    opacity: 0;
+    transition: all 0.2s;
+  }
+
+
+
+  .header_MB .header .nav_left li a:hover::after {
+    opacity: 1;
+  }
+
+  /* navbar right */
+  .header_MB .header .nav_right{
+    display: flex;
+    background-color: var(--white-color);
+    position: absolute;
+    top: 0;
+    transform: translateX(-35%);
+    right: 0%;
+    background-color: var(--F5F5F5-color);
+  }
+
+  .header_MB .header .nav_right li{
+    margin-left: 3%;
+    /* width: 20px;
+    height: 20px; */
+    background-color: transparent;
+  }
+
+  .header_MB .header .nav_right li img{
+    height: 35px;
+    width: 35px;
+  }
+
+  .header_MB .header .nav_right li a{
+    height: 100%;
+    width: auto;
+  }
+  /* logo_icon_mid */
+  .header_MB .logo_icon{
+    width: 64px;
+    height: 76px;
+
+  }
+  .header_MB .logo_icon img{
+    height: 100%;
+    width: auto;
+    opacity: 0;
+  }
+
+  .header_MB .header .logo_icon {
+    position: absolute;
+    left: 40%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 64px;
+    height: 77px;
+    background-image: url("../../../../assets/img/nav_logo_icon/black.png");
+    background-color: var(--F5F5F5-color);
+  }
+  .header_MB .header .logo_icon:hover{
+    background-color: var(--F5F5F5-color);
+    position: absolute;
+    left: 40%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 64px;
+    animation: animate 1s  steps(7) infinite;
+  }
+
+  @keyframes animate {
+    0%{
+      background-position: 0;
+      background-image: url("../../../../assets/img/nav_logo_icon/blue.png");
+    }
+    29%{
+      background-position: 0;
+      background-image: url("../../../../assets/img/nav_logo_icon/orange.png");
+    }
+    43%{
+      background-position: 0;
+      background-image: url("../../../../assets/img/nav_logo_icon/green.png");
+    }
+    57%{
+      background-position: 0;
+      background-image: url("../../../../assets/img/nav_logo_icon/rouge.png");
+    }
+    71%{
+      background-position: 0;
+      background-image: url("../../../../assets/img/nav_logo_icon/red_wine.png");
+    }
+    85%{
+      background-position: 0;
+      background-image: url("../../../../assets/img/nav_logo_icon/yellow.png");
+    }
+    99%{
+      background-position: 0;
+      background-image: url("../../../../assets/img/nav_logo_icon/blue.png");
+    }
+  }
+
+}
+
+@media only screen and (min-width: 1024px) {
+  .header_MB{
+    display: none;
+  }
+  /* header */
+
+.header_PC .header{
   position: relative;
   margin-top: 40px;
 
 }
 /* navbar left */
-.header .nav_left{
+.header_PC .header .nav_left{
   padding-left:  15px;
   display: flex;
   background-color: var(--F5F5F5-color);
 }
 
-.header .nav_left li{
+.header_PC .header .nav_left li{
   position: relative;
   padding-right: 20px;
   font-family: istok;
   color: var(--black-color);
 }
 
-.header .nav_left li a{
+.header_PC .header .nav_left li a{
   font-size: 24px;
   color: var(--black-color);
   text-decoration: none;
   position: relative;
 }
 
-.header .nav_left li a::after{
+.header_PC .header .nav_left li a::after{
   content: "";
   position: absolute;
   left: 0;
@@ -40,47 +192,49 @@
 
 
 
-.header .nav_left li a:hover::after {
+.header_PC .header .nav_left li a:hover::after {
   opacity: 1;
 }
-
 /* navbar right */
-.header .nav_right{
+.header_PC .header .nav_right{
   display: flex;
   background-color: var(--white-color);
   position: absolute;
-  top: 50%;
-  transform: translate(-50%,-50%);
+  top: 0;
+  transform: translateX(-35%);
   right: 0%;
   background-color: var(--F5F5F5-color);
 }
 
-.header .nav_right li{
-  margin-left: 19px;
-  width: 38px;
-  height: 38px;
+.header_PC .header .nav_right li{
+  margin-left: 3%;
+  /* width: 20px;
+  height: 20px; */
   background-color: transparent;
 }
 
+.header_PC .header .nav_right li img{
+  height: 40px;
+  width: 40px;
+}
 
-
-.header .nav_right li a{
+.header_PC .header .nav_right li a{
   height: 100%;
   width: auto;
 }
 /* logo_icon_mid */
-.logo_icon{
+.header_PC .logo_icon{
   width: 64px;
   height: 76px;
 
 }
-.logo_icon img{
+.header_PC .logo_icon img{
   height: 100%;
   width: auto;
   opacity: 0;
 }
 
-.header .logo_icon {
+.header_PC .header .logo_icon {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -90,7 +244,7 @@
   background-image: url("../../../../assets/img/nav_logo_icon/black.png");
   background-color: var(--F5F5F5-color);
 }
-.header .logo_icon:hover{
+.header_PC .header .logo_icon:hover{
   background-color: var(--F5F5F5-color);
   position: absolute;
   left: 50%;
@@ -131,13 +285,5 @@
   }
 }
 
-
-/* .nav_right  li:nth-of-type(6){
-  background-image: url("../../../../assets/img/nav_right_social_media/dark_mode.png");
-} */
-/* .dark{
-  background-image: url("../../../../assets/img/nav_right_social_media/dark_mode.png");
 }
-.nav_right li:nth-of-type(1){
-  background-image: url("../../../../assets/img/nav_right_social_media/ins.png");
-} */
+
